tests/NormalTests/paczka1/fuzzy1/68207897.err
Error in line 4: KUliGO2eaf A915 972,1
Error in line 2: Dg6gdvq3AHk S818 73,5
Error in line 15: tErp7aAaD S818 87,6
Error in line 22: tErp7aAaD A915 83,7
